--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
@@ -13,6 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.0.6",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "shortid": "^2.2.16",
